<resources>
    <string name="app_name">Villas Food</string>
    <string name="name_fast_food">Food Gourmet Villa\'s</string>
    <string name="foods">Lanches</string>
    <string name="cart">Carrinho</string>
    <string name="sodas">Refrigerantes</string>
    <string name="wine">Vinhos</string>
    <string name="address">Rua Passa a rua bruno, 111</string>
    <string name="phone">(11) 98745-6895</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos lanches</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="orientacao_pagamento">Digite os seus dados para concluir o pedido</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc_pagamento">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar pedido</string>
    <string name="realizar_compra">Realizar pedido</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="confira_resumo">Confira o resumo da compra:</string>
    <string name="nome">Nome</string>
    <string name="address_user">Endereço</string>
    <string name="phone_user">Telefone</string>
    <string name="bebidas">Bebidas</string>
    <string name="lanches">Lanches</string>
    <string name="refrigerante">Refrigerantes</string>
    <string name="vinho">Vinhos</string>
    <string name="send_car">Enviar para carrinho</string>
    <string name="itens_cart">Itens do seu carrinho</string>
</resources>
