<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/lista_food_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/conteudo_do_banner_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/list_name_fast_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/name_fast_food"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/lista_food_banner"
        app:layout_constraintEnd_toEndOf="@id/lista_food_banner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/lista_food_banner"
        app:layout_constraintTop_toTopOf="@id/lista_food_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/list_food_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wine"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/list_name_fast_food"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/list_name_fast_food"
        app:layout_constraintTop_toBottomOf="@+id/list_name_fast_food" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_pacotes_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lista_food_banner"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/wine_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>