<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="food"
            type="com.br.domain.entity.Food" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/resumo_food_imagem"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:contentDescription="@string/imagem_do_pacote"
            android:scaleType="centerCrop"
            app:carregaImagem="@{food.food_image}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@sample/pacote.json/imagem" />

        <TextView
            android:id="@+id/resumo_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@{food.food_name}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resumo_food_imagem"
            tools:text="@sample/pacote.json/food_name" />

        <TextView
            android:id="@+id/resumo_food_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/background_dark"
            android:text="@{food.food_description}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/resumo_food_name"
            app:layout_constraintTop_toBottomOf="@+id/resumo_food_name"
            tools:text="@sample/pacote.json/description_inicial" />


        <TextView
            android:id="@+id/resumo_pacote_preco"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="25sp"
            app:formatPrice="@{food.foodPrice}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_preco_final"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="@+id/resumo_pacote_preco_final"
            app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_preco_final"
            app:layout_constraintVertical_bias="0.012"
            tools:text="@sample/pacote.json/price" />

        <TextView
            android:id="@+id/resumo_pacote_preco_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/preco_final"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/resumo_food_description"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/resumo_food_description"
            app:layout_constraintTop_toBottomOf="@+id/resumo_food_description"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/resumo_food_botao_enviar_carrinho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/botao_redondo_laranja"
            android:text="@string/send_car"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>