<?xml version="1.0" encoding="utf-8"?>

<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--    <ImageView-->
<!--        android:id="@+id/resumo_wine_imagem"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="380dp"-->
<!--        android:contentDescription="@string/imagem_do_pacote"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        tools:srcCompat="@drawable/pergola_bord_suave" />-->

<!--    <TextView-->
<!--        android:id="@+id/resumo_wine_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="8dp"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@android:color/holo_blue_dark"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/resumo_wine_imagem"-->
<!--        tools:text="1 - X-Salada" />-->

<!--    <TextView-->
<!--        android:id="@+id/resumo_wine_description"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:textColor="@android:color/background_dark"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/resumo_wine_name"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/resumo_wine_name"-->
<!--        tools:text="Pão hamburguer, hamburguer, queijo, alface, maionese, tomate" />-->


<!--    <TextView-->
<!--        android:id="@+id/resumo_wine_preco"-->
<!--        android:layout_width="115dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:textColor="@android:color/holo_green_dark"-->
<!--        android:textSize="25sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_preco_final"-->
<!--        app:layout_constraintHorizontal_bias="0.65"-->
<!--        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_preco_final"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_preco_final"-->
<!--        app:layout_constraintVertical_bias="0.012"-->
<!--        tools:text="R$ 243,99" />-->

<!--    <TextView-->
<!--        android:id="@+id/resumo_pacote_preco_final"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:text="@string/preco_final"-->
<!--        android:textColor="@android:color/holo_red_dark"-->
<!--        android:textSize="35sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/resumo_wine_description"-->
<!--        app:layout_constraintHorizontal_bias="0.512"-->
<!--        app:layout_constraintStart_toStartOf="@+id/resumo_wine_description"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/resumo_wine_description"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--    <Button-->
<!--        android:id="@+id/resumo_wine_botao_enviar_carrinho"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="8dp"-->
<!--        android:background="@drawable/botao_redondo_laranja"-->
<!--        android:text="@string/send_car"-->
<!--        android:textColor="@android:color/white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="wine"
            type="com.br.domain.entity.Wine" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/resumo_wine_imagem"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:contentDescription="@string/imagem_do_pacote"
                app:carregaImagem="@{wine.wineImage}"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/pergola_bord_suave" />

            <TextView
                android:id="@+id/resumo_wine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@{wine.wine_name}"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="1 - X-Salada" />

            <TextView
                android:id="@+id/resumo_wine_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{wine.wineDescription}"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Pão hamburguer, hamburguer, queijo, alface, maionese, tomate" />


            <TextView
                android:id="@+id/resumo_pacote_preco_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/preco_final"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/resumo_wine_preco"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:formatPrice="@{wine.winePrice}"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="25sp"
                tools:text="R$ 243,99" />

            <Button
                android:id="@+id/resumo_wine_botao_enviar_carrinho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/botao_redondo_laranja"
                android:text="@string/send_car"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>
</layout>